--- a/project.html
+++ b/project.html
@@ -5,60 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project.PAW - 구조 상세보기</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=SUIT&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'SUIT', sans-serif;
+      background-color: #fefefe;
+      color: #212529;
+    }
+
+    .btn-custom {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 24px;
+      font-weight: 600;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+
+    .btn-custom:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+
+    .card {
+      border: none;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      transition: all 0.3s ease-in-out;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 16px rgba(0,0,0,0.08);
+    }
+
     .main-image {
       width: 100%;
-      height: 300px;
+      height: 360px;
       object-fit: cover;
-      border-radius: 10px;
+      border-radius: 1rem;
     }
+
     .gallery-image {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      border-radius: 8px;
+      border-radius: 0.75rem;
+    }
+
+    h2, h3, h4, h5 {
+      font-weight: 700;
     }
   </style>
-
-<!-- Custom Font -->
-<link href="https://fonts.googleapis.com/css2?family=SUIT&display=swap" rel="stylesheet">
-<style>
-  body {
-    font-family: 'SUIT', sans-serif;
-    background-color: #fefefe;
-    color: #212529;
-  }
-
-  .btn-custom {
-    background-color: #007bff;
-    color: white;
-    padding: 12px 24px;
-    font-weight: 600;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-  }
-
-  .btn-custom:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
-  }
-
-  .card {
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    transition: all 0.3s ease-in-out;
-  }
-
-  .card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 8px 16px rgba(0,0,0,0.08);
-  }
-
-  h2, h3, h4, h5 {
-    font-weight: 700;
-  }
-</style>
 </head>
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
@@ -72,7 +70,7 @@
     </div>
   </nav>
 
-  <main class="container pt-5 mt-5">
+  <main class="container-fluid pt-5 mt-5">
     <div id="projectDetail" class="mt-4"></div>
   </main>
 
@@ -90,59 +88,57 @@
         return;
       }
 
-      // ⚠️ 방어 코드 추가
       const galleryImages = [
         project.representativeImage,
         ...(project.sceneImages || []),
         ...(project.receiptImages || [])
       ];
 
-      const galleryHTML = galleryImages.map(src => `<div class="col-sm-4"><img src="${src}" class="gallery-image mb-3" /></div>`).join('');
+      const galleryHTML = galleryImages.map(src => \`
+        <div class="col-sm-6 col-md-4 mb-3">
+          <img src="\${src}" class="gallery-image" alt="등록 이미지">
+        </div>
+      \`).join('');
 
-      container.innerHTML = `
-        <h2 class="fw-bold mb-4">🐾 ${project.name}</h2>
-        <img src="${project.representativeImage}" class="main-image mb-4" alt="대표 이미지">
+      container.innerHTML = \`
+        <div class="card p-4">
+          <h2 class="fw-bold mb-4">🐾 \${project.name}</h2>
+          <img src="\${project.representativeImage}" class="main-image mb-4" alt="대표 이미지">
 
-        <div class="row mb-4">
-          <div class="col-sm-6">
-            <h5 class="fw-bold">📖 구조 상황</h5>
-            <p>${project.situation}</p>
+          <div class="row mb-4">
+            <div class="col-md-6">
+              <h5 class="fw-bold">📖 구조 상황</h5>
+              <p>\${project.situation}</p>
+            </div>
+            <div class="col-md-6">
+              <h5 class="fw-bold">💸 목표 및 부담금</h5>
+              <p><strong>목표 금액:</strong> \${project.goalAmount}원</p>
+              <p><strong>구조자 부담:</strong> \${project.ownerAmount}원</p>
+            </div>
           </div>
-          <div class="col-sm-6">
-            <h5 class="fw-bold">💸 목표 및 부담금</h5>
-            <p><strong>목표 금액:</strong> ${project.goalAmount}원</p>
-            <p><strong>구조자 부담:</strong> ${project.ownerAmount}원</p>
+
+          <div class="mb-4">
+            <h5 class="fw-bold">🖼️ 등록 이미지</h5>
+            <div class="row">\${galleryHTML}</div>
+          </div>
+
+          <div class="mb-4">
+            <h5 class="fw-bold">💬 후기</h5>
+            <p class="text-muted">후기 기능은 추후 연결 예정입니다.</p>
+          </div>
+
+          <div class="mb-4 text-center">
+            <a href="https://pf.kakao.com/_XnxlxjG" target="_blank" class="btn btn-custom mb-3">💌 카카오톡으로 따뜻한 마음 전하기</a><br>
+            <a href="about.html" class="text-decoration-none">📘 Project.PAW 소개 보기</a>
+          </div>
+
+          <div class="form-group">
+            <label for="adminApproval">🔐 관리자 승인 상태</label>
+            <input type="text" class="form-control" id="adminApproval" value="승인 대기 중" readonly>
           </div>
         </div>
-
-        <div class="mb-4">
-          <h5 class="fw-bold">🖼️ 등록 이미지</h5>
-          <div class="row">${galleryHTML}</div>
-        </div>
-
-        <div class="mb-4">
-          <h5 class="fw-bold">💬 후기</h5>
-          <p>후기 기능은 추후 연결 예정입니다.</p>
-        </div>
-
-        <div class="mb-4">
-          <a href="https://pf.kakao.com/_XnxlxjG" target="_blank" class="btn mb-2 btn-primary">💌 카카오톡으로 따뜻한 마음 전하기</a>
-        <a class="nav-link d-inline" href="about.html">About</a>
-        </div>
-
-        <div class="form-group">
-          <label for="adminApproval">🔐 관리자 승인 상태</label>
-          <input type="text" class="form-control" id="adminApproval" value="승인 대기 중">
-        </div>
-      `;
+      \`;
     });
   </script>
-<script>
-            function copyCurrentURL() {
-              navigator.clipboard.writeText(window.location.href).then(() => {
-                alert("링크가 복사되었습니다!");
-              });
-            }
-            </script>
-            </body>
+</body>
 </html>
