--- a/project.html
+++ b/project.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -5,86 +6,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project.PAW - 구조 상세보기</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Pretendard', sans-serif;
+      background-color: #fefefe;
+      color: #212529;
+    }
     .main-image {
       width: 100%;
-      height: 300px;
+      height: 360px;
       object-fit: cover;
-      border-radius: 10px;
+      border-radius: 1rem;
     }
     .gallery-image {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      border-radius: 8px;
+      border-radius: 0.75rem;
     }
+    .btn-custom {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 24px;
+      font-weight: 600;
+      border-radius: 8px;
+      transition: all 0.3s ease;
+    }
+    .btn-custom:hover {
+      background-color: #0056b3;
+      transform: scale(1.05);
+    }
+    .card {
+      border: none;
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      transition: all 0.3s ease-in-out;
+    }
+    .progress-bar {
+      background-color: #007bff;
+    }
+    footer {
+      background-color: #f8f9fa;
+      color: #6c757d;
+    }
+    footer a { color: #6c757d; }
+    footer a:hover { color: #000; }
   </style>
-
-<!-- Custom Font -->
-
-<style>
-  body {
-    font-family: 'SUIT', sans-serif;
-    background-color: #fefefe;
-    color: #212529;
-  }
-
-  .btn-custom {
-    background-color: #007bff;
-    color: white;
-    padding: 12px 24px;
-    font-weight: 600;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-  }
-
-  .btn-custom:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
-  }
-
-  .card {
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    transition: all 0.3s ease-in-out;
-  }
-
-  .card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 8px 16px rgba(0,0,0,0.08);
-  }
-
-  h2, h3, h4, h5 {
-    font-weight: 700;
-  }
-</style>
-
-<link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
-
-
-<style>
-  body {
-    font-family: 'Pretendard', 'SUIT', sans-serif;
-    color: #333;
-  }
-
-  footer {
-    background-color: #f8f9fa !important;
-    color: #6c757d !important;
-  }
-
-  footer a {
-    color: #6c757d !important;
-  }
-
-  footer a:hover {
-    color: #000 !important;
-  }
-</style>
-
 </head>
 <body class="bg-light">
+
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="index.html">🐾 Project.PAW</a>
@@ -100,10 +71,18 @@
     <div id="projectDetail" class="mt-4"></div>
   </main>
 
+  <footer class="text-center text-muted py-4 mt-5 border-top">
+    <div class="container">
+      <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
+      <p class="mb-2">도움은 본능, 연결은 선택</p>
+      <small>© 2025 Project.PAW. All rights reserved.<br>
+      고유번호: 105-82-89397 (프로젝트파우)</small>
+    </div>
+  </footer>
+
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      const params = new URLSearchParams(window.location.search);
-      const id = params.get("id");
+      const id = new URLSearchParams(window.location.search).get("id");
       const projects = JSON.parse(localStorage.getItem("projects") || "[]");
       const project = projects.find(p => p.id == id);
 
@@ -114,71 +93,71 @@
         return;
       }
 
-      // ⚠️ 방어 코드 추가
+      const percent = Math.min(
+        Math.round((parseInt(project.ownerAmount || 0) / parseInt(project.goalAmount || 1)) * 100),
+        100
+      );
+
       const galleryImages = [
         project.representativeImage,
         ...(project.sceneImages || []),
         ...(project.receiptImages || [])
       ];
+      const galleryHTML = galleryImages.map(src => \`
+        <div class="col-sm-6 col-md-4 mb-3">
+          <img src="\${src}" class="gallery-image" alt="등록 이미지">
+        </div>
+      \`).join('');
 
-      const galleryHTML = galleryImages.map(src => `<div class="col-sm-4"><img src="${src}" class="gallery-image mb-3" /></div>`).join('');
+      const shortSituation = project.situation.length > 120 ? 
+        project.situation.slice(0, 120) + '...' : 
+        project.situation;
 
-      container.innerHTML = `
-        <h2 class="fw-bold mb-4">🐾 ${project.name}</h2>
-        <img src="${project.representativeImage}" class="main-image mb-4" alt="대표 이미지">
+      container.innerHTML = \`
+        <div class="card p-4">
+          <h2 class="fw-bold mb-3">🐾 \${project.name}</h2>
+          <img src="\${project.representativeImage}" class="main-image mb-4" alt="대표 이미지">
 
-        <div class="row mb-4">
-          <div class="col-sm-6">
+          <div class="mb-3">
+            <div class="d-flex justify-content-between">
+              <span><strong>\${project.ownerAmount}</strong>원 모금됨</span>
+              <span>목표: \${project.goalAmount}원</span>
+            </div>
+            <div class="progress mt-1" style="height: 16px;">
+              <div class="progress-bar" role="progressbar" style="width: \${percent}%;">\${percent}%</div>
+            </div>
+          </div>
+
+          <div class="mb-4">
             <h5 class="fw-bold">📖 구조 상황</h5>
-            <p>${project.situation}</p>
+            <p id="situation-text">\${shortSituation}</p>
+            \${project.situation.length > 120 
+              ? '<button class="btn btn-sm btn-outline-secondary" onclick="document.getElementById(\'situation-text\').innerText = \'\${project.situation}\'; this.remove()">펼쳐보기</button>' 
+              : ''
+            }
           </div>
-          <div class="col-sm-6">
-            <h5 class="fw-bold">💸 목표 및 부담금</h5>
-            <p><strong>목표 금액:</strong> ${project.goalAmount}원</p>
-            <p><strong>구조자 부담:</strong> ${project.ownerAmount}원</p>
+
+          <div class="mb-4">
+            <h5 class="fw-bold">🖼️ 등록 이미지</h5>
+            <div class="row">\${galleryHTML}</div>
+          </div>
+
+          <div class="mb-4">
+            <h5 class="fw-bold">💬 후기</h5>
+            <p class="text-muted">후기 기능은 추후 연결 예정입니다.</p>
+          </div>
+
+          <div class="mb-4 text-center">
+            <a href="https://pf.kakao.com/_XnxlxjG" target="_blank" class="btn btn-custom mb-3">💌 카카오톡으로 따뜻한 마음 전하기</a>
+          </div>
+
+          <div class="form-group">
+            <label for="adminApproval">🔐 관리자 승인 상태</label>
+            <input type="text" class="form-control" id="adminApproval" value="승인 대기 중" readonly>
           </div>
         </div>
-
-        <div class="mb-4">
-          <h5 class="fw-bold">🖼️ 등록 이미지</h5>
-          <div class="row">${galleryHTML}</div>
-        </div>
-
-        <div class="mb-4">
-          <h5 class="fw-bold">💬 후기</h5>
-          <p>후기 기능은 추후 연결 예정입니다.</p>
-        </div>
-
-        <div class="mb-4">
-          <a href="https://pf.kakao.com/_XnxlxjG" target="_blank" class="btn mb-2 btn-primary">💌 카카오톡으로 따뜻한 마음 전하기</a>
-        <a class="nav-link d-inline" href="about.html">About</a>
-        </div>
-
-        <div class="form-group">
-          <label for="adminApproval">🔐 관리자 승인 상태</label>
-          <input type="text" class="form-control" id="adminApproval" value="승인 대기 중">
-        </div>
-      `;
+      \`;
     });
   </script>
-<script>
-            function copyCurrentURL() {
-              navigator.clipboard.writeText(window.location.href).then(() => {
-                alert("링크가 복사되었습니다!");
-              });
-            }
-            </script>
-            
-
-<footer class="bg-white text-center text-muted py-4 mt-5 border-top">
-  <div class="container">
-    <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
-    <p class="mb-2">도움은 본능, 연결은 선택</p>
-    <small>© 2025 Project.PAW. All rights reserved.<br>
-    고유번호: 105-82-89397 (프로젝트파우)</small>
-  </div>
-</footer>
-
-
 </body>
 </html>
