--- a/create.html
+++ b/create.html
@@ -3,201 +3,101 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project.PAW - 구조 프로젝트 등록</title>
+  <title>Project.PAW - 상세보기</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Pretendard', sans-serif;
+      background-color: #fefefe;
+      color: #212529;
+    }
 
-<!-- Custom Font -->
+    .card {
+      border-radius: 1rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
 
-<style>
-  body {
-    font-family: 'SUIT', sans-serif;
-    background-color: #fefefe;
-    color: #212529;
-  }
+    .project-image {
+      max-height: 400px;
+      object-fit: cover;
+      border-radius: 0.75rem;
+    }
 
-  .btn-custom {
-    background-color: #007bff;
-    color: white;
-    padding: 12px 24px;
-    font-weight: 600;
-    border-radius: 8px;
-    transition: all 0.3s ease;
-  }
+    .btn-kakao {
+      background-color: #fae100;
+      color: #000;
+      font-weight: bold;
+    }
 
-  .btn-custom:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
-  }
+    footer {
+      background-color: #f8f9fa;
+      color: #6c757d;
+    }
 
-  .card {
-    border: none;
-    border-radius: 1rem;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    transition: all 0.3s ease-in-out;
-  }
+    footer a {
+      color: #6c757d;
+    }
 
-  .card:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 8px 16px rgba(0,0,0,0.08);
-  }
-
-  h2, h3, h4, h5 {
-    font-weight: 700;
-  }
-</style>
-
-<link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
-
-
-<style>
-  body {
-    font-family: 'Pretendard', 'SUIT', sans-serif;
-    color: #333;
-  }
-
-  footer {
-    background-color: #f8f9fa !important;
-    color: #6c757d !important;
-  }
-
-  footer a {
-    color: #6c757d !important;
-  }
-
-  footer a:hover {
-    color: #000 !important;
-  }
-</style>
-
+    footer a:hover {
+      color: #000;
+    }
+  </style>
 </head>
-<body class="bg-light">
+<body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold" href="index.html">🐾 Project.PAW</a>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">🏠 홈</a></li>
         <li class="nav-item"><a class="nav-link" href="project_list.html">📋 후원하기</a></li>
-        <li class="nav-item"><a class="nav-link active" href="create.html">➕ 프로젝트 등록</a></li>
+        <li class="nav-item"><a class="nav-link" href="create.html">➕ 프로젝트 등록</a></li>
         <li class="nav-item"><a class="nav-link" href="#">🔐 로그인</a></li>
-      
-     <li class="nav-item">
-      <a class="nav-link" href="about.html">
-       ℹ️ About
-      </a>
-     </li>
-
-    </ul>
+        <li class="nav-item"><a class="nav-link" href="about.html">ℹ️ About</a></li>
+      </ul>
     </div>
   </nav>
 
-  <main class="container pt-5 mt-5">
-    <h2 class="mb-4 text-center">구조 프로젝트 등록</h2>
-    <p class="text-center text-muted mb-4">“도움은 본능, 연결은 선택 - 당신의 따뜻한 선택을 기다립니다.”</p>
-
-    <form id="rescueForm">
-      <div class="mb-3">
-        <label class="form-label">동물 이름</label>
-        <input type="text" class="form-control rounded-3 shadow-sm" id="name" required />
-      </div>
-      <div class="mb-3">
-        <label class="form-label">구조 상황 설명</label>
-        <textarea class="form-control rounded-3 shadow-sm" id="description" rows="3" required></textarea>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">목표 금액 (₩)</label>
-        <input type="number" class="form-control rounded-3 shadow-sm" id="amount" required />
-      </div>
-      <div class="mb-3">
-        <label class="form-label">구조자 부담금 (₩)</label>
-        <input type="number" class="form-control rounded-3 shadow-sm" id="contribution" required />
-      </div>
-      <div class="mb-3">
-        <label class="form-label">카카오톡 링크</label>
-        <input type="url" class="form-control rounded-3 shadow-sm" id="kakao" required />
-      </div>
-      <div class="mb-3">
-        <label class="form-label">대표 이미지 업로드</label>
-        <input class="form-control rounded-3 shadow-sm" type="file" id="mainImage" accept="image/*" required>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">구조 상황 사진 (여러 장)</label>
-        <input class="form-control rounded-3 shadow-sm" type="file" id="situationImages" accept="image/*" multiple>
-      </div>
-      <div class="mb-3">
-        <label class="form-label">영수증 사진 (여러 장)</label>
-        <input class="form-control rounded-3 shadow-sm" type="file" id="receiptImages" accept="image/*" multiple>
-      </div>
-      <div class="d-grid">
-        <button type="submit" class="btn mb-2 btn-primary">등록하기</button>
-      </div>
-      <p class="text-center text-muted mt-2">등록 후 상세 페이지로 이동됩니다.</p>
-    </form>
+  <main class="container mt-5 pt-5" id="projectContainer">
+    <!-- 상세 내용이 여기에 삽입됩니다 -->
   </main>
 
+  <footer class="text-center text-muted py-4 mt-5 border-top">
+    <div class="container">
+      <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
+      <p class="mb-2">도움은 본능, 연결은 선택</p>
+      <small>© 2025 Project.PAW. All rights reserved.<br>
+      고유번호: 105-82-89397 (프로젝트파우)</small>
+    </div>
+  </footer>
+
   <script>
-    function readFilesAsBase64(fileList) {
-      return Promise.all(Array.from(fileList).map(file => {
-        return new Promise((resolve, reject) => {
-          const reader = new FileReader();
-          reader.onload = e => resolve(e.target.result);
-          reader.onerror = e => reject(e);
-          reader.readAsDataURL(file);
-        });
-      }));
+    const container = document.getElementById('projectContainer');
+    const urlParams = new URLSearchParams(window.location.search);
+    const projectId = urlParams.get("id");
+    const projects = JSON.parse(localStorage.getItem("projects") || "[]");
+    const project = projects.find(p => p.id == projectId);
+
+    if (!project) {
+      container.innerHTML = `
+        <div class="text-center mt-5 pt-5">
+          <h3>❌ 프로젝트를 찾을 수 없습니다.</h3>
+          <p>URL이 잘못되었거나 데이터가 없습니다.</p>
+          <a href="index.html" class="btn btn-secondary mt-3">홈으로 돌아가기</a>
+        </div>`;
+    } else {
+      container.innerHTML = `
+        <div class="card p-4 mb-5">
+          <h2 class="mb-3">${project.name}</h2>
+          <img src="${project.representativeImage}" class="img-fluid mb-4 project-image" alt="대표 이미지">
+          <p><strong>📝 구조 상황 설명:</strong><br>${project.situation}</p>
+          <p><strong>🎯 목표 금액:</strong> ₩${Number(project.goalAmount).toLocaleString()}</p>
+          <p><strong>📍 구조자 부담금:</strong> ₩${Number(project.ownerAmount).toLocaleString()}</p>
+          <p><strong>💰 현재 모금액:</strong> ₩${Number(project.currentAmount).toLocaleString()}</p>
+          <p><a href="${project.kakaoLink}" class="btn btn-kakao" target="_blank">카카오톡으로 연결</a></p>
+        </div>
+      `;
     }
-
-    document.getElementById("rescueForm").addEventListener("submit", async function (e) {
-      e.preventDefault();
-
-      const name = document.getElementById("name").value;
-      const description = document.getElementById("description").value;
-      const amount = document.getElementById("amount").value;
-      const contribution = document.getElementById("contribution").value;
-      const kakao = document.getElementById("kakao").value;
-      const mainImage = document.getElementById("mainImage").files[0];
-      const situationImages = document.getElementById("situationImages").files;
-      const receiptImages = document.getElementById("receiptImages").files;
-
-      if (!name || !description || !amount || !contribution || !kakao || !mainImage) {
-        alert("모든 필드를 입력해주세요.");
-        return;
-      }
-
-      const mainImageBase64 = await readFilesAsBase64([mainImage]).then(res => res[0]);
-      const situationBase64 = await readFilesAsBase64(situationImages);
-      const receiptBase64 = await readFilesAsBase64(receiptImages);
-
-      const project = {
-        id: Date.now(),
-        name,
-        situation: description,
-        goalAmount: amount,
-        ownerAmount: contribution,
-        kakaoLink: kakao,
-        representativeImage: mainImageBase64,
-        situationImages: situationBase64,
-        receiptImages: receiptBase64,
-        currentAmount: 0
-      };
-
-      const projects = JSON.parse(localStorage.getItem("projects") || "[]");
-      projects.push(project);
-      localStorage.setItem("projects", JSON.stringify(projects));
-
-      window.location.href = `project.html?id=${project.id}`;
-    });
   </script>
-
-
-<footer class="bg-white text-center text-muted py-4 mt-5 border-top">
-  <div class="container">
-    <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
-    <p class="mb-2">도움은 본능, 연결은 선택</p>
-    <small>© 2025 Project.PAW. All rights reserved.<br>
-    고유번호: 105-82-89397 (프로젝트파우)</small>
-  </div>
-</footer>
-
-
 </body>
 </html>
