--- a/create.html
+++ b/create.html
@@ -2,102 +2,72 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project.PAW - 상세보기</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Project Detail - Project.PAW</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Pretendard', sans-serif;
-      background-color: #fefefe;
-      color: #212529;
+      font-family: 'Noto Sans KR', sans-serif;
+      background-color: #f9f9f9;
     }
-
-    .card {
-      border-radius: 1rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    .container {
+      margin-top: 40px;
+      margin-bottom: 40px;
     }
-
     .project-image {
       max-height: 400px;
       object-fit: cover;
-      border-radius: 0.75rem;
+      border-radius: 8px;
+      margin-bottom: 20px;
     }
-
-    .btn-kakao {
-      background-color: #fae100;
-      color: #000;
+    .label {
       font-weight: bold;
+      color: #444;
     }
-
-    footer {
-      background-color: #f8f9fa;
-      color: #6c757d;
-    }
-
-    footer a {
-      color: #6c757d;
-    }
-
-    footer a:hover {
-      color: #000;
+    .value {
+      margin-bottom: 15px;
     }
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="index.html">🐾 Project.PAW</a>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">🏠 홈</a></li>
-        <li class="nav-item"><a class="nav-link" href="project_list.html">📋 후원하기</a></li>
-        <li class="nav-item"><a class="nav-link" href="create.html">➕ 프로젝트 등록</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">🔐 로그인</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">ℹ️ About</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <main class="container mt-5 pt-5" id="projectContainer">
-    <!-- 상세 내용이 여기에 삽입됩니다 -->
-  </main>
-
-  <footer class="text-center text-muted py-4 mt-5 border-top">
-    <div class="container">
-      <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
-      <p class="mb-2">도움은 본능, 연결은 선택</p>
-      <small>© 2025 Project.PAW. All rights reserved.<br>
-      고유번호: 105-82-89397 (프로젝트파우)</small>
-    </div>
-  </footer>
+  <div class="container">
+    <a href="index.html" class="btn btn-secondary mb-4">&larr; 홈으로 돌아가기</a>
+    <div id="project-detail"></div>
+  </div>
 
   <script>
-    const container = document.getElementById('projectContainer');
-    const urlParams = new URLSearchParams(window.location.search);
-    const projectId = urlParams.get("id");
-    const projects = JSON.parse(localStorage.getItem("projects") || "[]");
-    const project = projects.find(p => p.id == projectId);
-
-    if (!project) {
-      container.innerHTML = `
-        <div class="text-center mt-5 pt-5">
-          <h3>❌ 프로젝트를 찾을 수 없습니다.</h3>
-          <p>URL이 잘못되었거나 데이터가 없습니다.</p>
-          <a href="index.html" class="btn btn-secondary mt-3">홈으로 돌아가기</a>
-        </div>`;
-    } else {
-      container.innerHTML = `
-        <div class="card p-4 mb-5">
-          <h2 class="mb-3">${project.name}</h2>
-          <img src="${project.representativeImage}" class="img-fluid mb-4 project-image" alt="대표 이미지">
-          <p><strong>📝 구조 상황 설명:</strong><br>${project.situation}</p>
-          <p><strong>🎯 목표 금액:</strong> ₩${Number(project.goalAmount).toLocaleString()}</p>
-          <p><strong>📍 구조자 부담금:</strong> ₩${Number(project.ownerAmount).toLocaleString()}</p>
-          <p><strong>💰 현재 모금액:</strong> ₩${Number(project.currentAmount).toLocaleString()}</p>
-          <p><a href="${project.kakaoLink}" class="btn btn-kakao" target="_blank">카카오톡으로 연결</a></p>
-        </div>
-      `;
+    function getProjectIdFromUrl() {
+      const params = new URLSearchParams(window.location.search);
+      return params.get('id');
     }
-  </script>
-</body>
-</html>
+
+    function loadProjectDetail() {
+      const id = getProjectIdFromUrl();
+      let projects = [];
+
+      try {
+        projects = JSON.parse(localStorage.getItem('projects')) || [];
+      } catch (e) {
+        console.error("로컬스토리지 파싱 오류:", e);
+        projects = [];
+      }
+
+      const project = projects.find(p => p.id === id);
+
+      const detailDiv = document.getElementById('project-detail');
+      if (!project) {
+        detailDiv.innerHTML = '<div class="alert alert-danger">해당 프로젝트를 찾을 수 없습니다.</div>';
+        return;
+      }
+
+      const imagesHtml = (project.additionalImages || []).map(img =>
+        `<img src="${img}" class="img-fluid mb-2 rounded project-image">`
+      ).join('');
+
+      detailDiv.innerHTML = `
+        <h2 class="mb-4">${project.name}</h2>
+        <img src="${project.representativeImage}" class="img-fluid project-image">
+        <p><span class="label">구조 상황:</span><br/> ${project.description}</p>
+        <p><span class="label">목표 금액:</span> ${Number(project.goalAmount).toLocaleString()}원</p>
+        <p><span class="label">구조자 부담금:</span> ${Number(project.selfPay).toLocaleString()}원</p>
+        <p><span class="label">카카오톡:</span> <a href="${project.kakao
