--- a/project_list.html
+++ b/project_list.html
@@ -1,31 +1,27 @@
-<!-- project_list.html -->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project.PAW - 후원하기</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Pretendard&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Pretendard', sans-serif;
-      background-color: #fefefe;
+      background-color: #f9f9f9;
       color: #333;
     }
+    .card-img-top {
+      height: 200px;
+      object-fit: cover;
+    }
     .card {
-      border: none;
-      border-radius: 1rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
       transition: all 0.3s ease-in-out;
     }
     .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.08);
-    }
-    footer {
-      background-color: #f8f9fa;
-      color: #6c757d;
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -41,12 +37,12 @@
   </div>
 </nav>
 
-<main class="container pt-5 mt-5">
-  <h2 class="mb-4 text-center">후원 가능한 프로젝트</h2>
+<main class="container pt-5 mt-5 mb-5">
+  <h2 class="mb-4 text-center">진행 중인 구조 프로젝트</h2>
   <div id="projectList" class="row g-4"></div>
 </main>
 
-<footer class="bg-white text-center text-muted py-4 mt-5 border-top">
+<footer class="bg-white text-center text-muted py-4 border-top">
   <div class="container">
     <p class="mb-1 fw-semibold">🐾 Project.PAW</p>
     <p class="mb-2">도움은 본능, 연결은 선택</p>
@@ -58,23 +54,28 @@
   const projectList = document.getElementById("projectList");
   const projects = JSON.parse(localStorage.getItem("projects") || "[]");
 
-  projectList.innerHTML = projects.map(p => `
-    <div class="col-md-4">
-      <div class="card h-100">
-        <img src="${p.representativeImage}" class="card-img-top rounded-top" alt="${p.name}" style="height: 220px; object-fit: cover;">
-        <div class="card-body">
-          <h5 class="card-title">${p.name}</h5>
-          <p class="card-text small">${p.situation.slice(0, 70)}...</p>
-          <p class="mb-1"><strong>목표:</strong> ₩${Number(p.goalAmount).toLocaleString()}</p>
-          <p class="mb-1"><strong>현재:</strong> ₩${Number(p.currentAmount).toLocaleString()}</p>
-          <p class="mb-3"><strong>구조자 부담금:</strong> ₩${Number(p.ownerAmount).toLocaleString()}</p>
-          <a href="project.html?id=${p.id}" class="btn btn-outline-primary w-100">상세 보기</a>
+  if (projects.length === 0) {
+    projectList.innerHTML = '<p class="text-center">등록된 프로젝트가 없습니다.</p>';
+  } else {
+    projects.slice(0, 6).forEach(project => {
+      const col = document.createElement("div");
+      col.className = "col-md-4";
+      col.innerHTML = `
+        <div class="card h-100 shadow-sm">
+          <img src="${project.representativeImage}" class="card-img-top" alt="${project.name}" />
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">${project.name}</h5>
+            <p class="card-text text-truncate">${project.situation}</p>
+            <p class="mb-1"><strong>목표:</strong> ₩${Number(project.goalAmount).toLocaleString()}</p>
+            <p class="mb-1"><strong>현재:</strong> ₩${Number(project.currentAmount).toLocaleString()}</p>
+            <p class="mb-3"><strong>구조자 부담:</strong> ₩${Number(project.ownerAmount).toLocaleString()}</p>
+            <a href="project.html?id=${project.id}" class="btn btn-outline-primary mt-auto">자세히 보기</a>
+          </div>
         </div>
-      </div>
-    </div>`
-  ).join("");
+      `;
+      projectList.appendChild(col);
+    });
+  }
 </script>
 </body>
 </html>
-
-<!-- 아래에는 이어서 create.html 리팩토링 버전을 입력할 예정입니다. -->
