--- a/project_list.html
+++ b/project_list.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project.PAW - 후원하기</title>
+  <title>Project.PAW - 기부보다 연결</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="app.min.css?v=v6-2025-08-11" rel="stylesheet">
+  <link href="app.min.css?v=v6-2025-08-12" rel="stylesheet">
   <meta name="theme-color" content="#6552FF">
   <meta property="og:title" content="Project.PAW">
   <meta property="og:description" content="기부보다 연결에 집중한 구조 플랫폼">
@@ -32,27 +32,14 @@
     </nav>
   </header>
 
-  <button id="adminToggle" class="btn btn-dark shadow admin-fab" title="관리자 모드 토글">
-    <i class="bi bi-sliders"></i>
-  </button>
-
   <section class="container py-5">
-    <div class="d-flex flex-wrap justify-content-between align-items-end gap-2 mb-3">
-      <div>
-        <h1 class="h3 fw-bold mb-1">모든 프로젝트</h1>
-        <p class="text-secondary mb-0">실시간 등록된 구조 요청을 확인하고 직접 연결하세요.</p>
-      </div>
-      <div class="d-flex gap-2">
-        <input id="searchInput" class="form-control" placeholder="이름/설명 검색">
-        <select id="statusFilter" class="form-select" style="max-width:150px">
-          <option value="">상태 전체</option>
-          <option value="approved">승인됨</option>
-          <option value="pending">대기</option>
-        </select>
-        <button id="clearSearch" class="btn btn-outline-secondary">초기화</button>
-      </div>
+    <div class="text-center mb-5">
+      <h1 class="fw-bold">도움은 본능, 연결은 선택</h1>
+      <p class="text-secondary">Project.PAW는 단순한 기부를 넘어, 사람과 동물의 따뜻한 연결을 만드는 플랫폼입니다.</p>
     </div>
-    <div id="project-list" class="masonry"></div>
+    <div id="project-list" class="row g-4">
+      <!-- JS로 프로젝트 카드 로드 -->
+    </div>
   </section>
 
   <footer class="border-top mt-5 py-4">
@@ -66,23 +53,34 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="app.min.js?v=v6-2025-08-11" defer></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const projects = JSON.parse(localStorage.getItem("projects") || "[]");
+      const container = document.getElementById("project-list");
 
-  <div id="pawToast" class="toast align-items-center text-bg-dark border-0" role="status" aria-live="polite" aria-atomic="true">
-    <div class="d-flex">
-      <div class="toast-body">완료되었습니다.</div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-  </div>
-  <!-- Lightbox Modal -->
-  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content border-0 shadow-lg rounded-4">
-        <div class="modal-body p-0">
-          <img id="lightboxTarget" src="" alt="미리보기" class="w-100" style="object-fit:contain;max-height:80vh">
-        </div>
-      </div>
-    </div>
-  </div>
+      if (projects.length === 0) {
+        container.innerHTML = `<div class="col-12 text-center text-secondary">아직 등록된 프로젝트가 없습니다.</div>`;
+        return;
+      }
+
+      projects.forEach((p, index) => {
+        const col = document.createElement("div");
+        col.className = "col-12 col-sm-6 col-lg-4";
+        col.innerHTML = `
+          <div class="card h-100 shadow-sm border-0">
+            <img src="${p.mainImage}" class="card-img-top" alt="${p.name}" style="height:200px; object-fit:cover;">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">${p.name}</h5>
+              <p class="card-text text-secondary small">${p.description.substring(0, 60)}...</p>
+              <p class="mb-1"><strong>목표금액:</strong> ${p.targetAmount.toLocaleString()}원</p>
+              <p class="mb-3"><strong>구조자 부담액:</strong> ${p.selfAmount.toLocaleString()}원</p>
+              <a href="project.html?id=${index}" class="btn btn-outline-primary w-100">자세히 보기</a>
+            </div>
+          </div>
+        `;
+        container.appendChild(col);
+      });
+    });
+  </script>
 </body>
 </html>
